test/parser/should_fail/doc_comments.souc.bad
import DoCommens

{;> doc comments {;> cannot nest. <;} <;}

main() = do
	x <- f $ 42 ; a comment
	print x

f(x) = do
	print x
